refactor: update UserController to use 'final' and 'var' for improved readability